@@ -359,7 +359,7 @@ xsltEvalVariable(xsltTransformContextPtr ctxt, xsltStackElemPtr elem,
 	    xmlNodePtr oldInsert;
 
 	    container = xmlNewDocNode(ctxt->document->doc, NULL,
-				      (const xmlChar *) "fake", NULL);
+			      (const xmlChar *) "fake node libxslt", NULL);
 	    if (container == NULL)
 		return(NULL);
 
@@ -485,7 +485,7 @@ xsltEvalGlobalVariable(xsltStackElemPtr elem, xsltTransformContextPtr ctxt) {
 	    xmlNodePtr oldInsert;
 
 	    container = xmlNewDocNode(ctxt->document->doc, NULL,
-				      (const xmlChar *) "fake", NULL);
+			      (const xmlChar *) "fake node libxslt", NULL);
 	    if (container == NULL)
 		return(NULL);
 
